--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>index</title>
   </head>
   <body>
@@ -20,9 +21,9 @@
           <img src="../assets/images/store-1.png" alt="store">
           <h2>台北中山旗艦店</h2>
           <ul class="info">
-            <li>電話：(02)000-1234</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：台北市中山區南京東路25巷2-1號</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(02)000-1234</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：台北市中山區南京東路25巷2-1號</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -30,9 +31,9 @@
           <img src="../assets/images/store-2.png" alt="store">
           <h2>台北綠園店</h2>
           <ul class="info">
-            <li>電話：(02)000-2345</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：台北市中正區復興南路 132-1 號</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(02)000-2345</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：台北市中正區復興南路 132-1 號</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -40,9 +41,9 @@
           <img src="../assets/images/store-3.png" alt="store">
           <h2>台中清水旗艦店</h2>
           <ul class="info">
-            <li>電話：(02)000-1234</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：台中市清水區經南一路 23 號 8 樓</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(02)000-1234</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：台中市清水區經南一路 23 號 8 樓</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -50,9 +51,9 @@
           <img src="../assets/images/store-4.png" alt="store">
           <h2>高雄中正形象店</h2>
           <ul class="info">
-            <li>電話：(07)000-2345</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：高雄市苓雅區中正路 38 號 12 樓</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(07)000-2345</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：高雄市苓雅區中正路 38 號 12 樓</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -60,9 +61,9 @@
           <img src="../assets/images/store-5.png" alt="store">
           <h2>高雄夢時代店</h2>
           <ul class="info">
-            <li>電話：(07)000-1234</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：高雄市前鎮區中華一路 63 號 6 樓</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(07)000-1234</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：高雄市前鎮區中華一路 63 號 6 樓</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
