--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/week3-homework/assets/main-fa4393a3.js"></script>
-    <link rel="stylesheet" href="/week3-homework/assets/main-17f69d40.css">
+    <script type="module" crossorigin src="/week3-homework/assets/main-4708cbe7.js"></script>
+    <link rel="stylesheet" href="/week3-homework/assets/main-45dacf5f.css">
   </head>
   <body>
     <header>
@@ -37,8 +37,8 @@
             </div>
         </div>
         <div class="contact">
-            <a href="">0800-000-000</a>
-            <a href="">glasses@business.com</a>
+            <a href=""><span class="material-symbols-outlined">call</span>0800-000-000</a>
+            <a href=""><span class="material-symbols-outlined">mail</span>glasses@business.com</a>
         </div>
         <div class="copyright-wrap">
             <p class="copyright">Copyright © 2020 Glasses.All rights reserved.</p>
