--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>index</title>
-    <script type="module" crossorigin src="/week3-homework/assets/main-fa4393a3.js"></script>
-    <link rel="stylesheet" href="/week3-homework/assets/main-17f69d40.css">
+    <script type="module" crossorigin src="/week3-homework/assets/main-4708cbe7.js"></script>
+    <link rel="stylesheet" href="/week3-homework/assets/main-45dacf5f.css">
   </head>
   <body>
     <header>
@@ -31,9 +32,9 @@
           <img src="/week3-homework/assets/store-1-e8e7cac3.png" alt="store">
           <h2>台北中山旗艦店</h2>
           <ul class="info">
-            <li>電話：(02)000-1234</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：台北市中山區南京東路25巷2-1號</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(02)000-1234</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：台北市中山區南京東路25巷2-1號</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -41,9 +42,9 @@
           <img src="/week3-homework/assets/store-2-e9ba0027.png" alt="store">
           <h2>台北綠園店</h2>
           <ul class="info">
-            <li>電話：(02)000-2345</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：台北市中正區復興南路 132-1 號</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(02)000-2345</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：台北市中正區復興南路 132-1 號</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -51,9 +52,9 @@
           <img src="/week3-homework/assets/store-3-0f3830b0.png" alt="store">
           <h2>台中清水旗艦店</h2>
           <ul class="info">
-            <li>電話：(02)000-1234</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：台中市清水區經南一路 23 號 8 樓</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(02)000-1234</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：台中市清水區經南一路 23 號 8 樓</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -61,9 +62,9 @@
           <img src="/week3-homework/assets/store-4-64d480b6.png" alt="store">
           <h2>高雄中正形象店</h2>
           <ul class="info">
-            <li>電話：(07)000-2345</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：高雄市苓雅區中正路 38 號 12 樓</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(07)000-2345</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：高雄市苓雅區中正路 38 號 12 樓</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -71,9 +72,9 @@
           <img src="/week3-homework/assets/store-5-6f093e06.png" alt="store">
           <h2>高雄夢時代店</h2>
           <ul class="info">
-            <li>電話：(07)000-1234</li>
-            <li>營業時間：10:00-21:00</li>
-            <li>地址：高雄市前鎮區中華一路 63 號 6 樓</li>
+            <li><span class="material-symbols-outlined">call</span>電話：(07)000-1234</li>
+            <li><span class="material-symbols-outlined">schedule</span>營業時間：10:00-21:00</li>
+            <li><span class="material-symbols-outlined">location_on</span>地址：高雄市前鎮區中華一路 63 號 6 樓</li>
           </ul>
           <a href="" class="button">詳細資訊</a>
         </div>
@@ -99,8 +100,8 @@
             </div>
         </div>
         <div class="contact">
-            <a href="">0800-000-000</a>
-            <a href="">glasses@business.com</a>
+            <a href=""><span class="material-symbols-outlined">call</span>0800-000-000</a>
+            <a href=""><span class="material-symbols-outlined">mail</span>glasses@business.com</a>
         </div>
         <div class="copyright-wrap">
             <p class="copyright">Copyright © 2020 Glasses.All rights reserved.</p>
